Closed Bug 841343 Opened 13 years ago Closed 13 years ago

BaselineCompiler: Fix new auto-regress/bug576846.js jit-test failure

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jandem, Assigned: jandem)

Details

Attachments

(1 file)

Attached patch PatchSplinter Review
We have a jit-test failure after the merge (caused by JM compiling JSOP_CALLEE now...). The problem is that I implemented JSOP_INITELEM_ARRAY as an inline path, but since we don't run TI that's wrong of course, we have to use an IC so that the property TypeSet is updated correctly. This patch reuses the SetElem IC and does not measurably influence SS. Later we can add a DenseInit stub that can skip the isObject, isInt32, shape, TypeObject, hole and bounds check.
Attachment #713881 - Flags: review?(kvijayan)
Attachment #713881 - Flags: review?(kvijayan) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: