Bug 841343 - Fix INITELEM_ARRAY to update the heap TypeSet. r=djvj